# shinchoku

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: CNAME  index.html  llms.txt
docs/ja/: index.html
go/: go.mod  shinchoku.go  shinchoku_test.go
node/: index.d.ts  index.js  package.json
node/test/: emit.test.js
php/: composer.json
php/src/: Shinchoku.php
php/tests/: run.php
python/: README.md  pyproject.toml
python/shinchoku/: __init__.py
python/tests/: test_emit.py
rust/: Cargo.toml  LICENSE  README.md
rust/src/: lib.rs
spec/: SPEC.md
spec/schema/: shinchoku.schema.json
